syntax = "proto3";

package links;

service LinksService {
  rpc AddLink (AddLinkRequest) returns (AddLinkResponse);

  rpc GetLinks (GetLinksRequest) returns (stream GetLinksResponse);
}

message AddLinkRequest {
  string url = 1;
  string title = 2;
  string comment = 3;
  repeated string categories = 4;
  string interestLevel = 5;
  repeated string authors = 6;
}

message AddLinkResponse {
  string status = 1;
}

message GetLinksRequest{
  string status = 1;
}

message GetLinksResponse {
  string url = 1;
  string title = 2;
  repeated string comments = 3;
  repeated string categories = 4;
  string interestLevel = 5;
  repeated string authors = 6;
}